Inicio de pagina prueba html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-hola camada
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web de Joa</title>
+</head>
+
+<body style="border: black solid 2px;">
+
+    <header>
+        <nav style="border: grey solid 2px;">
+            <li style="border: black solid 2px;"><a href="payaso.html">Moda de payasos</a></li>
+        </nav>
+    </header>
+
+    <section>
+        <center>
+            <h1 style="border: black solid 2px">
+                <b>Ropa re fachera</b>
+            </h1>
+            <img src=payaso.png width="400px" alt="Zapatos de payaso" title="Zapatos piola">
+            <form>
+                <label for="rango"><b>Subi esta barra segun que tanto te guste los zapatos</b></b></label>
+                <input id "rango" type="range" min="1" max="5" value="3">
+                <input type="button" value="Enviar" required>
+            </form>
+            <a href="payaso.html"><b>Toca acà para ver la moda de payasos</b></a>
+    </section>
+    <section>
+        <h2 style="border: blueviolet solid 2px">
+            Acontinuacion te hablamos de nuestros productos
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo possimus ad optio illo porro voluptatum,
+            impedit voluptas! Nesciunt mollitia explicabo, culpa odit perferendis pariatur libero vel, inventore
+            maxime
+            atque molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque excepturi asperiores totam consequatur
+            harum
+            amet, eligendi unde est molestias rerum dolor, fugit odit dolores temporibus eum enim error at ab?
+        </p>
+        </center>
+    </section>
+    <footer>
+
+    </footer>
+</body>
+
+</html>
