Eliminacion de etiqueta ul

--- a/payaso.html
+++ b/payaso.html
@@ -9,15 +9,12 @@
 </head>
 
 <body style="border: black solid 2px;">
+    <header style="border: black solid 2px;">
+        <nav>
+            <li style="border: black solid 2px;"><a href="index.html"><b>Toca acá para volver al inicio</b></a></li>
+        </nav>
+    </header>
     <center>
-        <header style="border: black solid 2px;">
-            <nav>
-                <ul style="border: black solid 2px;">
-                    <li style="border: black solid 2px;"><a href="index.html"><b>Toca acá para volver al inicio</b></a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
         <h1 style="border: royalblue solid 3px">
             La moda de los payasos esta renaciendo y nosotros lo sabemos!
         </h1>
@@ -36,12 +33,16 @@
                 <tr>
                     <td>15000$</td>
                     <td>S</td>
-                    <td><center>Demasiado pa</center></td>
+                    <td>
+                        <center>Demasiado pa</center>
+                    </td>
                 </tr>
                 <tr>
                     <td>30000$</td>
                     <td>XL</td>
-                    <td><center>Moy fachero</center></td>
+                    <td>
+                        <center>Moy fachero</center>
+                    </td>
                 </tr>
             </tbody>
         </table>
