--- a/payaso.html
+++ b/payaso.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Payaso Feliz</title>
+    <link rel="StyleSheet" href="general.css" type="text/css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body style="border: black solid 2px;">
-    <header style="border: black solid 2px;">
-        <nav>
-            <li style="border: black solid 2px;"><a href="index.html"><b>Toca acá para volver al inicio</b></a></li>
-        </nav>
+  <body>
+    <header>
+      <nav>
+        <li>
+          <a href="index.html"><b>Toca acá para volver al inicio</b></a>
+        </li>
+      </nav>
     </header>
-    <center>
-        <h1 style="border: royalblue solid 3px">
-            La moda de los payasos esta renaciendo y nosotros lo sabemos!
-        </h1>
-        <h3 style="border: yellowgreen solid 3px;">
-            <b>Mira que facheros que son!</b>
-        </h3>
-        <img src="payasochad.png" width="300px" <table>
 
-        <table style="border: black solid 3px;">
-            <thead>
-                <th style="border: black solid 3px;">Precio</th>
-                <th style="border: black solid 3px;">Talle</th>
-                <th style="border: black solid 3px;">Que tan picante</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>15000$</td>
-                    <td>S</td>
-                    <td>
-                        <center>Demasiado pa</center>
-                    </td>
-                </tr>
-                <tr>
-                    <td>30000$</td>
-                    <td>XL</td>
-                    <td>
-                        <center>Moy fachero</center>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </center>
-</body>
+    <h1>La moda de los payasos esta renaciendo y nosotros lo sabemos!</h1>
+    <h3>
+      <b>Mira que facheritos que son</b>
+    </h3>
+    <img src="payasochad.png" width="300px" />
 
+    <table>
+      <thead>
+        <th class="Cabeza">Precio</th>
+        <th class="Cabeza">Talle</th>
+        <th class="Cabeza">Que tan picante</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>15000$</td>
+          <td>S</td>
+          <td>Demasiado pa</td>
+        </tr>
+        <tr>
+          <td>30000$</td>
+          <td>XL</td>
+          <td>Moy fachero<</td>
+        </tr>
+      </tbody>
+    </table>
+    <section>
+        <article class="inf_extra">
+            Como podes notas los colores estan perfectamente conbinados y el estilo es unico, no te lo pierdas!
+        </article>
+    </section>
+  </body>
 </html>
