--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web de Joa</title>
+    <link rel="StyleSheet" href="general.css" />
 </head>
 
-<body style="border: black solid 2px;">
-
+<body>
     <header>
-        <nav style="border: grey solid 2px;">
-            <li style="border: black solid 2px;"><a href="payaso.html">Moda de payasos</a></li>
+        <nav >
+            <li><a href="payaso.html">Moda de payasos</a></li>
         </nav>
     </header>
 
-    <section>
-        <center>
-            <h1 style="border: black solid 2px">
+    <section class="mi-section">
+        
+            <h1>
                 <b>Ropa re fachera</b>
             </h1>
             <img src=payaso.png width="400px" alt="Zapatos de payaso" title="Zapatos piola">
-            <form>
+            <form class="form1">
                 <label for="rango"><b>Subi esta barra segun que tanto te guste los zapatos</b></b></label>
-                <input id "rango" type="range" min="1" max="5" value="3">
+                <input id="rango" type="range" min="1" max="5" value="3">
                 <input type="button" value="Enviar" required>
             </form>
             <a href="payaso.html"><b>Toca acà para ver la moda de payasos</b></a>
     </section>
     <section>
-        <h2 style="border: blueviolet solid 2px">
+        <h2>
             Acontinuacion te hablamos de nuestros productos
         </h2>
         <p>
@@ -42,7 +42,7 @@
             harum
             amet, eligendi unde est molestias rerum dolor, fugit odit dolores temporibus eum enim error at ab?
         </p>
-        </center>
+        
     </section>
     <footer>
 
